force-app/main/default/objects/Claims_Schedule__c/Claims_Schedule__c.object-meta.xml
<CustomObject>
    <label>Claims Schedule</label>
    <nameField>
        <label>Claims Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Claims Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>