force-app/main/default/objects/Claims_Schedule__c/fields/Catastrophe_Name__c.field-meta.xml
<CustomField>
    <fullName>Catastrophe_Name__c</fullName>
    <label>Catastrophe Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>