force-app/main/default/objects/Claims_Schedule__c/fields/Claim__c.field-meta.xml
<CustomField>
    <fullName>Claim__c</fullName>
    <label>Claim</label>
    <referenceTo>Claim__c</referenceTo>
    <relationshipLabel>Claims Schedules</relationshipLabel>
    <relationshipName>Claims_Schedules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>