force-app/main/default/objects/Claims_Schedule__c/fields/Deductible_Basis__c.field-meta.xml
<CustomField>
    <fullName>Deductible_Basis__c</fullName>
    <label>Deductible Basis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>