force-app/main/default/objects/Claims_Schedule__c/fields/Lloyd_s_Cat_Code__c.field-meta.xml
<CustomField>
    <fullName>Lloyd_s_Cat_Code__c</fullName>
    <label>Lloyd&apos;s Cat Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>123</fullName>
            </value>
            <value>
                <fullName>456</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>