force-app/main/default/objects/Claims_Schedule__c/fields/Location_of_loss_Country__c.field-meta.xml
<CustomField>
    <fullName>Location_of_loss_Country__c</fullName>
    <label>Location of loss Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>