force-app/main/default/objects/Claims_Schedule__c/fields/Location_of_loss_Postcode_Zip_Code_or__c.field-meta.xml
<CustomField>
    <fullName>Location_of_loss_Postcode_Zip_Code_or__c</fullName>
    <label>Location of loss Postcode / Zip Code or</label>
    <length>255</length>
    <type>Text</type>
</CustomField>