force-app/main/default/objects/Claims_Schedule__c/fields/Location_of_loss_State_Province_Territ__c.field-meta.xml
<CustomField>
    <fullName>Location_of_loss_State_Province_Territ__c</fullName>
    <label>Location of loss State, Province, Territ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>