force-app/main/default/objects/Claims_Schedule__c/fields/Loss_County__c.field-meta.xml
<CustomField>
    <fullName>Loss_County__c</fullName>
    <label>Loss County</label>
    <length>255</length>
    <type>Text</type>
</CustomField>