force-app/main/default/objects/Claims_Schedule__c/fields/Net_Claim_Reserve__c.field-meta.xml
<CustomField>
    <fullName>Net_Claim_Reserve__c</fullName>
    <formula>VG_Reserve__c - Deductible_Amount__c + Total_Ex_Gratia_Payment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Claim Reserve</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>