force-app/main/default/objects/Claims_Schedule__c/fields/Sums_Insured_Amount__c.field-meta.xml
<CustomField>
    <fullName>Sums_Insured_Amount__c</fullName>
    <label>Sums Insured Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>