force-app/main/default/objects/Claims_Schedule__c/fields/Total_Claim_O_S__c.field-meta.xml
<CustomField>
    <fullName>Total_Claim_O_S__c</fullName>
    <formula>Net_Claim_Reserve__c -  VG_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Claim O/S</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>