force-app/main/default/objects/Claims_Schedule__c/fields/Total_Ex_Gratia_Payment__c.field-meta.xml
<CustomField>
    <fullName>Total_Ex_Gratia_Payment__c</fullName>
    <label>Total Ex-Gratia Payment</label>
    <summarizedField>Claims_Progression__c.Ex_gratia_payment__c</summarizedField>
    <summaryForeignKey>Claims_Progression__c.VG_Claims_Schedule__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>