force-app/main/default/objects/Claims_Schedule__c/fields/Total_Recovery_Received__c.field-meta.xml
<CustomField>
    <fullName>Total_Recovery_Received__c</fullName>
    <label>Total Recovery Received</label>
    <summarizedField>Claims_Progression__c.Total_Recovery_Received__c</summarizedField>
    <summaryForeignKey>Claims_Progression__c.VG_Claims_Schedule__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>