force-app/main/default/objects/Claims_Schedule__c/fields/Unique_Identification_Number__c.field-meta.xml
<CustomField>
    <fullName>Unique_Identification_Number__c</fullName>
    <label>Unique Identification Number</label>
    <type>TextArea</type>
</CustomField>