force-app/main/default/objects/Claims_Schedule__c/fields/VG_Paid__c.field-meta.xml
<CustomField>
    <fullName>VG_Paid__c</fullName>
    <label>Total Claim Paid</label>
    <summarizedField>Claims_Progression__c.VG_Paid__c</summarizedField>
    <summaryForeignKey>Claims_Progression__c.VG_Claims_Schedule__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>