force-app/main/default/objects/Claims_Schedule__c/fields/VG_Policy_Schedule__c.field-meta.xml
<CustomField>
    <fullName>VG_Policy_Schedule__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Policy Schedule</label>
    <referenceTo>Policy_Schedule__c</referenceTo>
    <relationshipLabel>Claims Schedules</relationshipLabel>
    <relationshipName>Claims_Schedules</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>