force-app/main/default/objects/Claims_Schedule__c/fields/VG_Reserve__c.field-meta.xml
<CustomField>
    <fullName>VG_Reserve__c</fullName>
    <label>Ground Up Reserve</label>
    <summarizedField>Claims_Progression__c.VG_Reserve__c</summarizedField>
    <summaryForeignKey>Claims_Progression__c.VG_Claims_Schedule__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>